Changed and fixed line

--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -202,7 +202,9 @@
     <ClInclude Include="..\src\CollisionShape.h" />
     <ClInclude Include="..\src\Config.h" />
     <ClInclude Include="..\src\SoundType.h" />
-    <ClInclude Include="..\src\SpaceShip.h" />
+    <ClInclude Include="..\src\SpaceShip.h">
+      <FileType>CppClass</FileType>
+    </ClInclude>
     <ClInclude Include="..\src\Sprite.h" />
     <ClInclude Include="..\src\UIControl.h" />
     <ClInclude Include="..\src\DisplayObject.h" />
